--- a/PuzzleAM/Components/Shared/Tab.razor.css
+++ b/PuzzleAM/Components/Shared/Tab.razor.css
@@ -16,7 +16,7 @@
     position: fixed;
     top: 1rem;
     transition: left 0.3s ease;
-    z-index: 1001;
+    z-index: 2000;
     pointer-events: auto;
 }
 
